# rtiow

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
libs/glad/: glad.c  glad.h
src/frontend/: glsl_smart_denoise.cpp  glsl_smart_denoise.h  imgui_impl.cpp  imgui_impl.h  main.cpp  opengl_display_image.cpp  opengl_display_image.h  opengl_shader.cpp  opengl_shader.h  opengl_uniform_buffer.cpp  opengl_uniform_buffer.h  output_opengl.cpp  output_opengl.h
src/frontend/shaders/: fragment_denoise.glsl  fragment_plain.glsl  vertex.glsl
src/raytrace/: camera.cpp  camera.h  config.h  geometry_base.h  geometry_spheres.cpp  geometry_spheres.h  glm.h  material.cpp  material.h  ray.h  raytrace.cpp  raytrace.h  rgb_buffer.h  scene.cpp  scene.h  thread_pool.h  types.h  utils.h
